--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@rspack/plugin-react-refresh": "^1.4.3",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "css-loader": "^7.1.2",
     "react-refresh": "^0.17.0",
+    "style-loader": "^4.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
