--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/react-dom": "^19.1.5",
     "css-loader": "^7.1.2",
     "react-refresh": "^0.17.0",
+    "sass": "^1.89.1",
+    "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
